fix booking logic
