# internal/dto/response.go
@@ -1,0 +1,10 @@
+package dto
+
+type Response struct {
+	Message string      `json:"message"`
+	Data    interface{} `json:"data,omitempty"`
+}
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+}
